--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div>
 	  <h2>Introduction</h2>
         <p> (update at May 9, 2019)</P>
-        <p>This speech synthesis model is developed from Google's Tacotron model(<a href="https://arxiv.org/abs/1703.10135">arXiv</a>), and trained by Biaobei open source database(contains 10h female clear recordings). After 100k-steps training, this model has been able to synthesize relatively influence and vivid speech and able to deal with most context conditions. However, due to the limited data volume and insufficient training(I think), there still are unnatural rhythm and perceptible current sound in synthesized audios. Since this project is on going yet, I believe significant improvement will be made soon. Following are selected samples:</P>
+        <p>This speech synthesis model is developed from Google's Tacotron model(<a href="https://arxiv.org/abs/1703.10135">Here's the paper</a>), and trained by Biaobei open source database(contains 10h female clear recordings). After 100k-steps training, this model has been able to synthesize relatively influence and vivid speech and able to deal with most context conditions. However, due to the limited data volume and insufficient training(I think), there still are unnatural rhythm and perceptible current sound in synthesized audios. Since this project is on going yet, I believe significant improvement will be made soon. Following are selected samples:</P>
 	</div>
     <div>
 	  <h2>Samples</h2>
