--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     </article>
 
     <div>
-	<p> (update at May 9, 2019)</P>
+	<p> (Update at May 9, 2019)</P>
 	<h2>Introduction</h2>
-        <p>This speech synthesis model is developed from Google's Tacotron model(<a href="https://arxiv.org/abs/1703.10135">Here's the paper</a>), and trained by Biaobei open source database(contains 10h female clear recordings). After 100k-steps training, this model has been able to synthesize relatively influence and vivid speech and able to deal with most context conditions. However, due to the limited data volume and insufficient training(I think), there still are unnatural rhythm and perceptible current sound in synthesized audios. Since this project is on going yet, I believe significant improvement will be made soon. Following are selected samples:</P>
+        <p>This speech synthesis model is developed from Google's Tacotron model (<a href="https://arxiv.org/abs/1703.10135">Here's the paper</a>) and trained by Biaobei open source database (contains 10h female clear recordings). After 100k-steps training, this model has been able to synthesize relatively influent and vivid speech and able to deal with most context conditions. However, due to the limited data volume and insufficient training(I think), there still are unnatural rhythm and perceptible current sounds in synthesized audios. Since this subject is still on going, I believe significant improvement will be made soon. Following are selected samples:</P>
 	</div>
     <div>
 	  <h2>Samples</h2>
@@ -58,7 +58,7 @@
 
     <div>
         <h2>Nevertheless</h2>
-        <p>When trying to synthesize a sentences with special terms or phrases that unlikely to appeared in training database, there will be some troubles. It is hard for a 10-hours young model to read a text that she don't know what it is talking about.</p>
+        <p>When trying to synthesize a sentences with special terms or phrases that unlikely to appeared in training database, there will be some troubles. It is hard for a 10-hours-old young model to read a text that she don't know what it is talking about.</p>
         <table>
              <tr><td class="transcript">"哈佛大学用生成式对抗网络和遗传算法创造图片控制猴子大脑"</td></tr>
              <tr><td class="transcript">("Harvard University use Generative Adversarial Network and Genetic Algorithm to create picture to control Monkey's brain.")</td></tr>
