--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     </article>
 
     <div>
-	<p> (Update at May 9, 2019)</P>
+	
+	<p> Author: KJW <br />
+		(Update at May 31, 2019)</P>
 	<h2>Introduction</h2>
         <p>This speech synthesis model is developed from Google's Tacotron model (<a href="https://arxiv.org/abs/1703.10135">Here's the paper</a>) and trained by Biaobei open source database (contains 10h female clear recordings). After 100k-steps training, this model has been able to synthesize relatively influent and vivid speech and able to deal with most context conditions. However, due to the limited data volume and insufficient training(I think), there still are unnatural rhythm and perceptible current sounds in synthesized audios. Since this subject is still on going, I believe significant improvement will be made soon. Following are selected samples:</P>
 	</div>
@@ -70,6 +72,9 @@
              <tr><td class="transcript">("The annual meeting of Association for Computational Linguistics officially opened this week in Melbourne")</td></tr>
              <tr><td><audio controls><source src="samples/5-1.wav"></audio></td></tr>
             </table>
+	    <br />
+	    <br />
+	    <br />
     </div>
   </body>
 </html>
